--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>hello code</h3>
+    <h3>hello world</h3>
+    <div class="main">
+       <div class="section">
+           <p>I live in japan and I am developer</p>
+       </div>
+    </div>
 </body>
 </html>
